annoying whitespace on left but absolute positioning chldren fixed the dislocation bug

--- a/src/Components/App.css
+++ b/src/Components/App.css
@@ -67,7 +67,15 @@ a:active {
 }
 
 .transition-anim {
-  position: absolute;
   width: 100%;
   height: 100%;
+  margin: 20px;
+}
+
+.transition-block{
+  position: absolute;
+  left:0;
+  right:0;
+  margin-left:auto;
+  margin-right:auto;
 }
